--- a/code/Snakefile
+++ b/code/Snakefile
@@ -81,7 +81,8 @@ rule create_input:
 rule run_pyclone:
     input:
         filelist="{outdir}/input_filelist.tsv",
-        partition="{outdir}/partition.tsv"
+        partition="{outdir}/partition.tsv",
+        input=config['input']
     output:
         "{outdir}/output_filelist.txt"
     threads: 30
@@ -94,15 +95,24 @@ rule run_pyclone:
             echo {input.filelist}
 
             files=`grep $profile {input.filelist}`
-			first_file=`grep -m1 $profile {input.filelist}`
-	        #nvalues=`echo $first_file | head -1 | xargs cat | awk 'length($0) > 0' | wc -l`
-			nvalues=`cat $first_file | awk 'length($0) > 0' | wc -l`
-			echo $nvalues
-	        if [[ $nvalues -gt 2 ]]; then
-	            bash run_pyclone.sh $profile {wildcards.outdir} {input.filelist} 
-	        else
-	            python create_singleton_cluster.py {wildcards.outdir} $profile $files
-	        fi
+            
+
+
+            nfiles=`wc -l $files` 
+
+            if [[ $nfiles -lt 1 ]]; then
+                python handle-all-0.py {input.input} {input.partition} $profile {wildcards.outdir} 
+            else
+			    first_file=`grep -m1 $profile {input.filelist}`
+	            #nvalues=`echo $first_file | head -1 | xargs cat | awk 'length($0) > 0' | wc -l`
+			    nvalues=`cat $first_file | awk 'length($0) > 0' | wc -l`
+			    echo $nvalues
+	            if [[ $nvalues -gt 2 ]]; then
+	                bash run_pyclone.sh $profile {wildcards.outdir} {input.filelist} 
+	            else
+	                python create_singleton_cluster.py {wildcards.outdir} $profile $files
+	            fi
+            fi
 
            
 	    }}
